YUK-18682 Read now from Hardware Config page causing webserver error Added relayNumber to ExpressComReportedAddressRelay constructor